--- a/01_첫째마당 소스/2장/dboperator_test.html
+++ b/01_첫째마당 소스/2장/dboperator_test.html
@@ -6,7 +6,17 @@
 	<script>
 		var num1 = 10;
 		var num2 = 3;
-	 
+        num1 += num2;
+        document.write(num1, "<br>"); // 13
+
+        num1 -= num2;
+        document.write(num1, "<br>"); // 10
+
+        num1 *= num2;
+        document.write(num1, "<br>"); // 30
+
+        num1 %= num2;
+        document.write(num1, "<br>"); // 0 
 	</script>
 </head>
 <body>
