--- a/01_첫째마당 소스/2장/three_condi_test.html
+++ b/01_첫째마당 소스/2장/three_condi_test.html
@@ -4,9 +4,20 @@
 <meta charset="UTF-8">
 <title> 삼항 조건 연산자 </title>
 <script>
-	var a = 10;
-	var b = 3;
+	var num1 = 10;
+	var num2 = 3;
 
+	num1--;
+	document.write(num1, "<br>");
+
+	num1++;
+	document.write(num1, "<br>");
+
+	result=num2++;
+	document.write(result, "<br>");
+
+	result= ++num2;
+	document.write(result,"<br>");
 </script>
 </head>
 <body>
