--- a/01_첫째마당 소스/2장/typeof_test.html
+++ b/01_첫째마당 소스/2장/typeof_test.html
@@ -5,8 +5,10 @@
 <title>데이터 타입</title>
 <script>
 	var num = 100;
-	var str = "자바스크립트"; 
+	var str = "자바스크립트";
 
+	document.write(typeof num, "<br>");
+	document.write(typeof str);
 </script>
 </head>
 <body>
