coding:break_1_test.html

--- a/01_첫째마당 소스/3장/break_1_test.html
+++ b/01_첫째마당 소스/3장/break_1_test.html
@@ -4,8 +4,11 @@
 <meta charset="UTF-8">
 <title> break문 </title>
 <script>
-
-	document.write("=== The End ===");
+    for(var i=1; i<=10; i++) {
+        if(i==6) break;
+        document.write(i,"<br>");
+    }
+    document.write("=== The End ===");
 </script>
 </head>
 <body>
