coding:double_for_test_2.html

--- a/01_첫째마당 소스/3장/3장 미션/double_for_test_2.html
+++ b/01_첫째마당 소스/3장/3장 미션/double_for_test_2.html
@@ -4,19 +4,19 @@
 <meta charset="UTF-8">
 <title> 제어문 종합문제 </title>
 <script>
-	var num = 1;
-	var t = "<table border='1'>";
-	for(var i = 1; i <= ; i++) {
-		t += "<tr>";
-		for(var k = 1; k <= ; k++) {
-			t += 
-			num++;
-		}
-		t += "</tr>";
-	}
-	t += "</table>";
+    var num = 1;
+    var t = "<table border='1'>";
+    for(var i = 1; i <= 5; i++) {
+        t += "<tr>";
+        for(var k = 1; k <=5 ; k++) {
+            t += "<td>"+num+"</td>";
+            num++;
+        }
+        t += "</tr>";
+    }
+    t += "</table>";
 
-	document.write(t);
+    document.write(t);
 </script>
 </head>
 <body>
