--- a/01_첫째마당 소스/3장/3장 미션/while_test_1.html
+++ b/01_첫째마당 소스/3장/3장 미션/while_test_1.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <title> 제어문 종합문제 </title>
 <script>
-	var i = 1;
-	while( ) {
-		document.write("5 X " + i + "=" + i * 5, "<br>");
-
-	}
+    var i = 1;
+    while(i<=9) {
+        document.write("5 X " + i + "=" + i * 5, "<br>");
+        i++;
+    }
 </script>
 </head>
 <body>
