--- a/01_첫째마당 소스/4장/win_ob1_test.html
+++ b/01_첫째마당 소스/4장/win_ob1_test.html
@@ -4,7 +4,8 @@
 <meta charset = "UTF-8">
 <title> window 객체 </title>
 <script>
-
+    window.open("winpopup.html","pop1","width=300,height=400, \
+                    left=300, top50");
 </script>
 </head>
 <body>
