--- a/01_첫째마당 소스/5장/function_6_test.html
+++ b/01_첫째마당 소스/5장/function_6_test.html
@@ -11,6 +11,19 @@
 <script>
 	var num = 1;
 
+	function gallery(direct) {
+		if(direct) {
+		    if(num==8) return;
+		    num++;
+		}
+		else {
+		    if(num==1) return;
+		    num--;
+		}
+
+		var imgTag = document.getElementById("photo");
+		imgTag.setAttribute("src","images/pic_"+num+".jpg");
+    }
 </script>
 </head>
 <body>
@@ -18,7 +31,7 @@
 		<p><img src="images/pic_1.jpg" id="photo" alt=""></p>
 		<p>
 			<button onclick="gallery(0)">이전</button>
-			<button onclick="gallery(1)">댜음</button>
+			<button onclick="gallery(1)">다음</button>
 		</p>
 	</div>
 </body>
