coding:function_13_test.html

--- a/01_첫째마당 소스/5장/5장 미션/function_13_test.html
+++ b/01_첫째마당 소스/5장/5장 미션/function_13_test.html
@@ -14,7 +14,7 @@
 		document.write("국어: " + this.korNum, "<br>");
 		document.write("영어: " + this.engNum, "<br>");
 	}
-	TestScore.prototype.getAvg = function() {
+	this.getAvg = function() {
 		return  (this.korNum+this.engNum) / 2;
 	}
     }
